--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -152,5 +152,12 @@
         "accessibilityStatement": "Заявление о доступности",
         "sitemap": "Карта сайта",
         "designBy": "Дизайн и продвижение от"
+    },
+    "error": {
+        "title": "Что-то пошло не так",
+        "description": "Приносим извинения за неудобства. Страница, которую вы ищете, временно недоступна.",
+        "details": "Детали ошибки:",
+        "retry": "Попробовать снова",
+        "goHome": "На главную"
     }
 }
